# DiscordRPC

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
NewRPC/: Rich_Presence.py
src/discord_rpc_extension/: __main__.py  config.py  rpc.py  spotify.py
